# blender-weave

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: release.yml
addon/: __init__.py  blender_manifest.toml  properties.py  server_bridge.py  ui_panel.py
addon/handlers/: __init__.py  _compat.py  _utils.py  ambientcg.py  animation.py  assembly.py  bake.py  camera.py  collections.py  curves.py  custom_props.py  drivers.py  file_ops.py  hierarchy.py  hunyuan3d.py  hyper3d.py  io.py  lights.py  lod.py  materials.py  mesh_ops.py  modifiers.py  nodes.py  objects.py  particles.py  perception.py  perception_registry.py  physics.py  polyhaven.py  polypizza.py  procedural.py  render_region.py  rigging.py  scene.py  scene_tools.py  selection.py  sketchfab.py  smithsonian3d.py  snapshots.py  trellis2.py  (+4 more)
addon/handlers/subsystems/: __init__.py  animation.py  assembly_detect.py  containment.py  facing_context.py  groups.py  hierarchy.py  lighting.py  material_harmony.py  material_predictions.py  mesh_quality.py  micro_render.py  multi_view.py  physics.py  ray_grid.py  relationships.py  semantic_groups.py  shadows.py  spatial_facts.py  surface_placement.py  transform_integrity.py
claude-plugin/: .mcp.json
claude-plugin/.claude-plugin/: plugin.json
claude-plugin/agents/: blender-weave.md  material-designer.md  render-director.md  scene-doctor.md  space-planner.md
claude-plugin/commands/: scene-check.md
claude-plugin/hooks/: hooks.json
claude-plugin/skills/blender-workflows/: SKILL.md
src/blender_weave/: __init__.py  server.py
(+8 files in other folders)
