[project]
name = "blender-weave"
version = "1.0.0"
description = "Weave 3D worlds with AI — the MCP server for Blender"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Pedro Augusto"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.3.0",
]

[project.scripts]
blender-weave = "blender_weave.server:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
